--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -1,5 +1,23 @@
+<!--
+  ~ Hello Cloud Foundry - a simple Kotlin app using Spring Boot deployed on Cloud Foundry
+  ~ Copyright (C) 2018 Alexandre Roman
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,6 +44,11 @@
             <input id="name" type="text" placeholder="What's your name?" required autofocus/>
             <button id="send" type="button">Send</button>
         </form>
+    </div>
+    <div id="footer">
+        <p>This page was served by app instance
+            <strong th:text="${instanceGuid}"/> (index <strong th:text="${instanceId}"/>)
+        </p>
     </div>
 </div>
 </body>
